--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "type": "module",
     "private": true,
     "scripts": {
-        "start": "bun run src/index.ts",
+        "start": "bun run deploy && bun run src/index.ts",
         "dev": "bun --watch run src/index.ts",
         "deploy": "bun run src/deploy-commands.ts",
         "format": "prettier --write ."
