--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "devDependencies": {
         "@types/bun": "latest",
         "@types/node-cron": "^3.0.11",
-        "@types/speedtest-net": "^2.1.5",
         "prettier": "^3.8.1"
     },
     "peerDependencies": {
@@ -23,8 +22,7 @@
         "axios": "^1.13.4",
         "discord.js": "^14.25.1",
         "mongoose": "^9.1.5",
-        "node-cron": "^4.2.1",
-        "speedtest-net": "^2.2.0"
+        "node-cron": "^4.2.1"
     },
     "prettier": {
         "tabWidth": 4,
